// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AppHeader /> > should not render the banner when no flags are set 1`] = `
"
 ████ █    █  █ █   █ ████
 █  █ █    █  █ ██ ██ █  █
 ████ █    █  █ █ █ █ ████
 █    █    █  █ █   █ █  █
 █    ████ ████ █   █ ████

 PLUMB CLI v1.0.0


 Good afternoon — what are we building?


Tips for getting started:
1. Create PLUMB.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results
"
`;

exports[`<AppHeader /> > should not render the default banner if shown count is 5 or more 1`] = `
"
 ████ █    █  █ █   █ ████
 █  █ █    █  █ ██ ██ █  █
 ████ █    █  █ █ █ █ ████
 █    █    █  █ █   █ █  █
 █    ████ ████ █   █ ████

 PLUMB CLI v1.0.0


 Good afternoon — what are we building?


Tips for getting started:
1. Create PLUMB.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results
"
`;

exports[`<AppHeader /> > should render the banner with default text 1`] = `
"
 ████ █    █  █ █   █ ████
 █  █ █    █  █ ██ ██ █  █
 ████ █    █  █ █ █ █ ████
 █    █    █  █ █   █ █  █
 █    ████ ████ █   █ ████

 PLUMB CLI v1.0.0


 Good afternoon — what are we building?

╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ This is the default banner                                                                       │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯

Tips for getting started:
1. Create PLUMB.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results
"
`;

exports[`<AppHeader /> > should render the banner with warning text 1`] = `
"
 ████ █    █  █ █   █ ████
 █  █ █    █  █ ██ ██ █  █
 ████ █    █  █ █ █ █ ████
 █    █    █  █ █   █ █  █
 █    ████ ████ █   █ ████

 PLUMB CLI v1.0.0


 Good afternoon — what are we building?

╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ There are capacity issues                                                                        │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯

Tips for getting started:
1. Create PLUMB.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results
"
`;

exports[`<AppHeader /> > should render the full logo when logged out 1`] = `
"
 ████ █    █  █ █   █ ████
 █  █ █    █  █ ██ ██ █  █
 ████ █    █  █ █ █ █ ████
 █    █    █  █ █   █ █  █
 █    ████ ████ █   █ ████

 PLUMB CLI v1.0.0


 Good afternoon — what are we building?
"
`;
